# autopush

./: Makefile  foo.py  requirements.txt
autopush/: main.py  websocket.py
autopush_rs/: Cargo.toml  __init__.py
autopush_rs/src/: client.rs  lib.rs  message.rs  server.rs
