[package]
name = "autopush"
version = "0.1.0"
authors = ["Alex Crichton <alex@alexcrichton.com>"]

[lib]
crate-type = ["cdylib"]

[dependencies]
futures = "0.1"
tokio-core = "0.1"
tokio-tungstenite = { git = 'https://github.com/alexcrichton/tokio-tungstenite', branch = 'ping-pong' }
tungstenite = { git = 'https://github.com/alexcrichton/tungstenite-rs', branch = 'ctl-pong' }
libc = "0.2"

[profile.release]
debug-assertions = true
